[package]
name = "r-graph"
version = "0.1.0"
authors = ["Greast <jonas.jonas.srensen11@gmail.com>"]
edition = "2018"
repository = "https://github.com/Greast/r-graph"
license = "MIT"
keywords = ["graph"]
description = "Modular Graph library for Rust-lang"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
itertools = "*"